# qc-bc-interactive

./: .gitignore  CLAUDE.md  README.md  cdk.json  deploy.sh  package-lock.json  package.json  tsconfig.json
app/: Dockerfile  build.sh  db_config.py  main.py
backend/: api_server.py  requirements.txt
backend/braket_integration/: __init__.py  device_analyzer.py  device_profiles.py  models.py
backend/qc_env_impact/: __init__.py  calculator.py
backend/qc_env_impact/constants/: __init__.py  emissions.py  power.py  regions.py
backend/qc_env_impact/engine/: __init__.py  quantum_engine.py
backend/qc_env_impact/models/: __init__.py  quantum_computer.py  results.py
docs/: AWS_BRAKET_QUANTUM_DEVICES.md
docs/ui-information/: Readme.md  ui-descriptions.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: EnvironmentalImpactSection.tsx  FeedbackButton.tsx  Footer.tsx  Header.tsx
frontend/src/hooks/: useJourneyState.ts
lib/: frontend-serverless-stack.ts
src/: CLAUDE.md  Dockerfile.lambda  README.md  enhanced_quantum_service.py  event_system.py  lambda_quantum_keys.py  load_test_comprehensive.py  main.py  pyproject.toml  quantum_blockchain.py  signature_wall_system.py
src/quantum_service/: README.md  __init__.py  credentials.py  crypto.py  devices.py  handlers.py  quantum_service.py
src/static/css/: style.css
src/templates/: admin.html  index.html  jobs.html  signup.html  wall.html
test/: qc-bc-interactive-cdk.test.ts
(+45 files in other folders)
